--- a/src/main/resources/static/css/primary.css
+++ b/src/main/resources/static/css/primary.css
@@ -16,7 +16,7 @@
     border: transparent;
   display: block;
   }
-.Heading {
+/* .Heading {
     position: fixed;
     overflow: hidden;
     top: 0;
@@ -62,7 +62,7 @@
 
 .selected-entity {
     margin-left: 10px;
-    width: 120px;
+    width: auto;
     margin-top: 10px;
     height: 40px;
     background-color: #f5f5f5;
@@ -92,7 +92,7 @@
 .name h6{
   font-size: 14px;
   margin-left: 5px;
-}
+} */
 .transform-box{
     display: flex;
     border-radius: 15px;
