--- a/src/main/resources/static/css/secondary.css
+++ b/src/main/resources/static/css/secondary.css
@@ -15,7 +15,7 @@
     border: transparent;
   display: block;
   }
-.Heading {
+/* .Heading {
   position: fixed;
     overflow: hidden;
     top: 0;
@@ -61,7 +61,7 @@
 
 .selected-entity {
     margin-left: 10px;
-    width: 120px;
+    width: auto;
     margin-top: 10px;
     height: 40px;
     background-color: #f5f5f5;
@@ -91,7 +91,7 @@
 .name h6{
   font-size: 14px;
   margin-left: 5px;
-}
+} */
 .transform-box{
     display: flex;
     border-radius: 15px;
