--- a/src/main/resources/templates/load.html
+++ b/src/main/resources/templates/load.html
@@ -16,11 +16,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" th:src="@{/js/listcsv.js}"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <script type="text/javascript">
+
+    function preventBack() { window.history.forward(); }
+    setTimeout("preventBack()", 0);
+    window.onunload = function () { null };
+    
+    
+</script>
 </head>
 
 <body>
 
-
+  <script th:if="${session.isEmpty()}">
+    location.href='/api/session';</script>
 
   <section>
     <div class="container-fliud">
@@ -70,7 +79,7 @@
 
   <section>
     <div class="container-fliud">
-      <div class="row px-5">
+      <div class="row px-3">
         <div class="col-md-12 py-1 px-5" >
           <div class="Recent_Used">
             <h3>Recently Used</h3>
@@ -120,10 +129,6 @@
                  ></p>
               </a>
             </div>
-
-
-
-
           </div>
         </div>
       </div>
