--- a/src/main/resources/templates/secondary.html
+++ b/src/main/resources/templates/secondary.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vadidate Entities</title>
     <link rel="stylesheet" href="" th:href="@{/css/secondary.css}">
+    <link rel="stylesheet" href="" th:href="@{/css/commonStyle.css}">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -21,14 +23,23 @@
 
 
 
+    <script type="text/javascript">
 
+        function preventBack() { window.history.forward(); }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+        
+        
+    </script>
 </head>
 
 <body>
+    <script th:if="${session.isEmpty()}">
+        location.href='/api/session';</script>
     <section>
         <div class="container-fliud pb-5">
             <div class="row">
-                <div class="col-md-12" style="background-color: black;">
+                <div class="col-md-12">
                     <div class="Heading">
                         <h1> Lookup Files</h1>
                         <a th:href="@{'/api/lookup'}">
@@ -46,8 +57,8 @@
 
 
 
-            <div class="row">
-                <div class="col-md-12" style="padding-left: 50px;  padding-top: px;">
+            <div class="row px-1">
+                <div class="col-md-12 pt-4 pb-3 px-5" >
                     <div class="selected-row">
                         <h3>Entity Selected:</h3>
                         <div class="selected-entity">
@@ -65,10 +76,10 @@
             </div>
 
 
-            <div class="row">
-                <div class="col-md-4" style="padding-left: 65px;  padding-top: 5px;">
+            <div class="row  px-3">
+                <div class="col-md-4 px-5" >
 
-                    <div class="primary">
+                    <div class="primary px-1">
                         <i class="bi bi-check-circle-fill"></i>
 
                         <hr>
@@ -121,7 +132,7 @@
             </div>
         </div>
 
-        <footer class="text-right text-white fixed-bottom" style="background-color: #f6f6f6;">
+        <footer class="text-right text-white fixed-bottom">
 
             <div class="row">
                 <div class="col-md-12 ">
