--- a/src/main/resources/templates/transform.html
+++ b/src/main/resources/templates/transform.html
@@ -17,9 +17,17 @@
   <script type="text/javascript" th:src="@{/js/listcsv.js}"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
+<script type="text/javascript">
 
+  function preventBack() { window.history.forward(); }
+  setTimeout("preventBack()", 0);
+  window.onunload = function () { null };
+  
+  
+</script>
 <body>
-
+  <script th:if="${session.isEmpty()}">
+    location.href='/api/session';</script>
 
 
   <section>
