--- a/src/main/resources/templates/validate.html
+++ b/src/main/resources/templates/validate.html
@@ -17,16 +17,25 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" th:src="@{/js/listcsv.js}"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <script type="text/javascript">
+
+    function preventBack() { window.history.forward(); }
+    setTimeout("preventBack()", 0);
+    window.onunload = function () { null };
+    
+    
+</script>
 </head>
 
 <body>
 
 
-
+  <script th:if="${session.isEmpty()}">
+    location.href='/api/session';</script>
   <section>
     <div class="container-fliud">
       <div class="row">
-        <div class="col-md-12" style="background-color: black;" >
+        <div class="col-md-12"  >
           <div class="Heading" style=" border: 6px solid #F0823D;
           border-top:0;
           border-left: 0;
@@ -55,7 +64,6 @@
           </div>
           <div class="parent-search">
             <div class="search search-bar">
-
               <input id="searchQueryInputValidate" class="searchQueryInput" type="text" name="searchQueryInput"
                 placeholder="Search" value="" />
               <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
